<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_menu">

    <item
        android:id="@+id/nav_enter_grades"
        android:icon="@drawable/enter_grade_icon"
        android:title="@string/enter_grades_menu_title"/>

    <item
        android:id="@+id/nav_enter_improvement"
        android:icon="@drawable/enter_improvement_icon"
        android:title="@string/enter_improvement_menu_title"/>

    <item
        android:id="@+id/nav_search_grade"
        android:icon="@drawable/search_grade_icon"
        android:title="@string/search_grade_menu_title"/>

    <item
        android:id="@+id/nav_list_student"
        android:icon="@drawable/list_students_icon"
        android:title="@string/list_students_menu_title"/>
</menu>