<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchGradeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/lnSearchGradeFrag">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/dark_blue"
            android:text="@string/search_grades_text_view" />

        <EditText
            android:id="@+id/edtStudentIdSearchGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/student_id_edt_hint" />

        <Button
            android:id="@+id/btnSubmitSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/submit_btn" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"
                    android:text="@string/student_name_search_txt" />

                <TextView
                    android:id="@+id/txtStudentNameSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"
                    android:text="@string/program_search_txt" />

                <TextView
                    android:id="@+id/txtProgramSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"
                    android:text="@string/marks_for_course_1_search_txt" />

                <TextView
                    android:id="@+id/txtMarkCourse1Search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"
                    android:text="@string/marks_for_course_2_search_txt" />

                <TextView
                    android:id="@+id/txtMarkCourse2Search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"
                    android:text="@string/marks_for_course_3_search_txt" />

                <TextView
                    android:id="@+id/txtMarkCourse3Search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"
                    android:text="@string/marks_for_course_4_search_txt" />

                <TextView
                    android:id="@+id/txtMarkCourse4Search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"
                    android:text="@string/total_marks_search_txt" />

                <TextView
                    android:id="@+id/txtTotalMarkSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"/>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</FrameLayout>